# timeseries_agent

./: .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml  setup.py
examples/: 01_pattern_BM_example.ipynb  02_genetic_tuner_tutorial.ipynb  03_stock_rl_example.ipynb  example_test.py  example_train.py  example_train_tuner.py  timeseries_agent_genetic_tuner_tutorial.ipynb  timeseries_agent_tuner_tutorial.ipynb  timeseries_agent_tutorial.ipynb
timeseries_agent/: __init__.py
timeseries_agent/agents/: __init__.py  ppo_agent.py  reinforce_agent.py  reinforce_step_agent.py
timeseries_agent/api/: __init__.py  factory.py
timeseries_agent/data/: __init__.py
timeseries_agent/envs/: __init__.py  csv_env.py
timeseries_agent/tuners/: __init__.py  base.py  genetic.py
timeseries_agent/utils/: __init__.py
timeseries_agent/utils/core/: __init__.py  rewards.py  tools.py
timeseries_agent/utils/extras/: __init__.py  visualization.py
