[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timeseries_agent"
version = "0.1.0"
description = "A Policy Gradient RL agent for time series prediction using PyTorch Lightning."
authors = [
    { name = "Collins Patrick Ohagwu", email = "cpohagwu@gmail.com" }
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]

requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.19.0",
    "lightning>=2.5.0",
    "litmodels>=0.1.8",    
    "matplotlib>=3.0.0",
    'torch>=1.9.0; platform_system=="Linux"',
    'torch>=1.9.0; platform_system=="Darwin"',
    'torch>=1.9.0; platform_system=="Windows"',
    "scikit-learn>=1.6.1",
]

[project.urls]
"Homepage" = "https://github.com/cpohagwu/timeseries_agent"
"Bug Tracker" = "https://github.com/cpohagwu/timeseries_agent/issues"
"Documentation" = "https://timeseries_agent.readthedocs.io/en/latest/"
